--- a/package.json
+++ b/package.json
@@ -6,27 +6,50 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "generate": "npx drizzle-kit generate",
-    "migrate": "npx drizzle-kit migrate"
+    "lint": "next lint --quiet",
+    "ts:check": "tsc --noEmit --project tsconfig.json",
+    "fix": "npm run ts:check && npm run lint && npm run prettier-changed && npm run stylelint-changed",
+    "prettier": "prettier --write pages components styles types mocks locales lib containers assets/icons e2e/src",
+    "prettier-changed": "npx prettier --write $(git diff --name-only) $(git ls-files --others --exclude-standard)",
+    "stylelint": "stylelint '**/*.scss' --fix",
+    "stylelint-changed": "git diff --name-only | grep \"\\.scss$\" | xargs stylelint --fix",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.1.5",
-    "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
-    "postgres": "^3.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "wagmi": "^2.9.6"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^8.1.3",
+    "@storybook/addon-essentials": "^8.1.3",
+    "@storybook/addon-interactions": "^8.1.3",
+    "@storybook/addon-links": "^8.1.3",
+    "@storybook/nextjs": "^8.1.3",
+    "@storybook/react": "^8.1.3",
+    "@storybook/react-webpack5": "^8.1.3",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "drizzle-kit": "^0.21.2",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
+    "eslint-plugin-storybook": "^0.8.0",
+    "prettier": "^3.2.5",
+    "sass": "^1.77.2",
+    "sass-loader": "^14.2.1",
+    "storybook": "^8.1.3",
+    "storybook-addon-swc": "^1.2.0",
+    "stylelint": "^16.5.0",
+    "stylelint-config-css-modules": "^4.4.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.3.0",
+    "typescript": "^5.4.5",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
