--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-switch": "^1.0.3",
+    "classnames": "^2.5.1",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
