Added layout, start of page offers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,6 +43,9 @@
       "@components/*": [
         "./components/*"
       ],
+      "@styles/*": [
+        "./styles/*"
+      ],
       "@containers/*": [
         "./containers/*"
       ],
