--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "classnames": "^2.5.1",
+    "i18next": "^23.11.5",
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^13.5.0",
+    "react-table": "^7.8.0",
     "wagmi": "^2.9.6"
   },
   "devDependencies": {
