--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "react-table": "^7.8.0",
-    "wagmi": "^2.9.6"
+    "view": "^1.1.1",
+    "wagmi": "^2.9.7"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
