--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "react-table": "^7.8.0",
-    "view": "^1.1.1",
+    "viem": "^2.13.1",
     "wagmi": "^2.9.7"
   },
   "devDependencies": {
@@ -55,11 +55,18 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "@types/react-table": "^7.7.20",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-storybook": "^0.8.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
