--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,10 @@
 {
-  "singleQuote": true
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "printWidth": 120,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false
 }
