--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^3.0.5",
+    "@rainbow-me/rainbowkit": "^2.1.1",
     "@tanstack/react-query": "^5.40.0",
     "@wagmi/core": "^2.10.4",
     "classnames": "^2.5.1",
