--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,10 @@
     "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "ignorePatterns": [
     "!**/*",
     ".next/**/*",
@@ -62,10 +65,13 @@
     ],
     "no-unsafe-optional-chaining": 0,
     "import/no-extraneous-dependencies": "off",
-    "prettier/prettier": ["error", {
-      "endOfLine":"auto"
-    }],
-      "react/function-component-definition": [
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "react/function-component-definition": [
       2,
       {
         "namedComponents": "arrow-function",
@@ -75,7 +81,6 @@
     "react/jsx-no-constructed-context-values": 0,
     "react/no-array-index-key": 0,
     "react/button-has-type": 0,
-    "react-hooks/exhaustive-deps": 0,
     "react/jsx-props-no-spreading": 0,
     "react/require-default-props": 0
   },
