--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.3.0",
+    "prettier": "3.3.0",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
     "storybook": "^8.1.3",
