--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_APP_NAME=string
 NEXT_PUBLIC_PROJECT_ID=string
 NEXT_PUBLIC_CONTRACT_ADDRESS=string
 NEXT_PUBLIC_ALCHEMY_API_KEY=string
+NEXT_PUBLIC_SITE_URL=string
