--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -31,6 +32,9 @@
     "@tanstack/react-table": "^8.17.3",
     "@wagmi/core": "^2.10.4",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
     "i18next": "^23.11.5",
     "next": "14.2.3",
     "react": "^18.3.1",
