--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NEXT_PUBLIC_APP_NAME=string
 NEXT_PUBLIC_PROJECT_ID=string
 NEXT_PUBLIC_CONTRACT_ADDRESS=string
-NEXT_PUBLIC_ALCHEMY_API_KEY=string
+NEXT_PUBLIC_ALCHEMY_API_URL=string
 NEXT_PUBLIC_SUBGRAPH_ENDPOINT=string
-NEXT_PUBLIC_IS_TESTNET=boolean
+NEXT_PUBLIC_NETWORK=mainnet | arbitrum | sepolia
 NEXT_PUBLIC_SITE_URL=string
