updated .env example, displayed transaction gas, infinite approve when accepting offer

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_PUBLIC_ALCHEMY_API_URL=string
 NEXT_PUBLIC_SUBGRAPH_ENDPOINT=string
 NEXT_PUBLIC_NETWORK=mainnet | arbitrum | sepolia
 NEXT_PUBLIC_SITE_URL=string
+NEXT_PUBLIC_ETHERSCAN_API_KEY=string
