--- a/package.json
+++ b/package.json
@@ -13,12 +13,7 @@
     "prettier": "prettier --write pages components styles types mocks locales lib containers assets/icons e2e/src",
     "prettier-changed": "npx prettier --write $(git diff --name-only) $(git ls-files --others --exclude-standard)",
     "stylelint": "stylelint '**/*.scss' --fix",
-    "stylelint-changed": "git diff --name-only | grep \"\\.scss$\" | xargs stylelint --fix",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "stylelint-changed": "git diff --name-only | grep \"\\.scss$\" | xargs stylelint --fix"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -30,7 +25,6 @@
     "@rainbow-me/rainbowkit": "^2.1.1",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-table": "^8.17.3",
-    "@wagmi/core": "^2.10.4",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.11",
     "graphql": "^16.8.1",
@@ -42,29 +36,22 @@
     "react-i18next": "^13.5.0",
     "react-tooltip": "^5.26.4",
     "viem": "^2.13.1",
-    "view": "^1.1.1",
     "wagmi": "^2.9.7",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.6",
-    "@babel/preset-env": "^7.24.6",
-    "@babel/preset-react": "^7.24.6",
-    "@babel/preset-typescript": "^7.24.6",
     "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
-    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "identity-obj-proxy": "^3.0.0",
     "prettier": "3.3.0",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
