Update readme and env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_APP_NAME=string
-NEXT_PUBLIC_PROJECT_ID=string
-NEXT_PUBLIC_CONTRACT_ADDRESS=string
-NEXT_PUBLIC_ALCHEMY_API_URL=string
-NEXT_PUBLIC_SUBGRAPH_ENDPOINT=string
+NEXT_PUBLIC_APP_NAME=My_App_Name
+NEXT_PUBLIC_PROJECT_ID=Your_project_ID
+NEXT_PUBLIC_CONTRACT_ADDRESS=contract_address
+NEXT_PUBLIC_ALCHEMY_API_URL=https://eth-sepolia.g.alchemy.com/v2/{yourApiKey}
+NEXT_PUBLIC_SUBGRAPH_ENDPOINT=https://api.studio.thegraph.com/query/...
 NEXT_PUBLIC_NETWORK=mainnet | arbitrum | sepolia
-NEXT_PUBLIC_SITE_URL=string
-NEXT_PUBLIC_ETHERSCAN_API_URL=string
+NEXT_PUBLIC_SITE_URL=https://my-site.com
+NEXT_PUBLIC_ETHERSCAN_API_URL=https://api-sepolia.etherscan.io/api?apikey={yourApiKey}
