--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
+    "react-query-kit": "^3.3.0",
     "react-tooltip": "^5.26.4",
     "viem": "^2.13.1",
     "wagmi": "^2.9.7",
