--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "react-tooltip": "^5.26.4",
+    "vaul": "^0.9.1",
     "viem": "^2.13.1",
     "wagmi": "^2.9.7",
     "zustand": "^4.5.2"
