--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next": "^23.11.5",
     "next": "14.2.3",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.5.0",
     "react-tooltip": "^5.26.4",
@@ -44,6 +45,7 @@
     "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
