--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:port": "next start -p ${PORT}",
     "lint": "next lint --quiet",
     "ts:check": "tsc --noEmit --project tsconfig.json",
     "fix": "npm run ts:check && npm run lint && npm run prettier-changed && npm run stylelint-changed",
